@@ -45,26 +45,32 @@ public interface ILinkRestService {
 	 * Creates a {@link SelectBuilder} to customize data retrieval. This is the
 	 * most generic and customizable way to select data. It can be used as a
 	 * replacement of any other select.
+	 * 
+	 * @since 1.14
 	 */
+	<T> SelectBuilder<T> select(Class<T> root);
+
+	/**
+	 * @deprecated since 1.14 in favor of {@link #select(Class)}.
+	 * @return
+	 */
+	@Deprecated
 	<T> SelectBuilder<T> forSelect(Class<T> root);
 
 	/**
 	 * Creates a {@link SelectBuilder} to customize data retrieval. This is the
 	 * most generic and customizable way to select data. It can be used as a
 	 * replacement of any other select.
+	 * 
+	 * @since 1.14
 	 */
+	<T> SelectBuilder<T> select(SelectQuery<T> query);
+
+	/**
+	 * @deprecated since 1.14 in favor of {@link #select(SelectQuery)}.
+	 */
+	@Deprecated
 	<T> SelectBuilder<T> forSelect(SelectQuery<T> query);
-
-	/**
-	 * @deprecated since 1.3 use {@link #create(Class)}.
-	 */
-	<T> DataResponse<T> insert(Class<T> root, String objectData);
-
-	/**
-	 * @deprecated since 1.7 use {@link #update(Class)} and configure the
-	 *             returned builder.
-	 */
-	<T> DataResponse<T> update(Class<T> root, Object id, String objectData);
 
 	SimpleResponse delete(Class<?> root, Object id);
 
